service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: myapp
spec:
  selector:
    app: myapp

  ports:
    - port: 8080
      targetPort: 8080

  type: LoadBalancer
